--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Food recipe finder JavaScript application",
   "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,7 @@
   "homepage": "https://github.com/stormymayday/FoodRecipeFinder#readme",
   "devDependencies": {
     "webpack": "^4.43.0",
-    "webpack-cli": "^2.1.5",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
 }
